# talkative-llm

./: .gitignore  HFmodel.py  HFtest.py  README.md  Test.py  Test1.py  Test2.py  cudatest.py  main.py  pyproject.toml  requirements.txt  setup.py
configs/: alpaca_lora_example.yml  baize_llm_example.yml  bloom_llm_example.yml  cohere_llm_example.yaml  cohere_llm_example_jong.yaml  dolly_llm_example.yml  falcon_llm_example.yml  flan_ul2_llm_exampleyml.yml  gpt4-x-alpaca_llm_example.yml  gpt4all_llm_example.yml  huggingface_llm_example.yaml  koala_llm_example.yml  lamini_llm_example.yml  llama_llm_example.yml  mpt_llm_example.yml  open_ai_chat_example.yaml  open_ai_completion_example.yaml  open_assist_llm_example.yml  openalpaca_llm_example.yml  opt_llm_example.yml  pandalm_llm_example.yml  pegasus_llm_example.yml  pythia_llm_example.yml  redpajama_llm_example.yml  replit_llm_example.yml  stanford_alpaca_llm_example.yml  t5_llm_example.yml  ul2_llm_example.yml  vicuna_llm_13b_example.yml  vicuna_llm_7b_example.yml  vicuna_llm_example.yml
configs/alpaca_lora/: alpaca_lora_llm_example.yaml
configs/cohere/: cohere_llm_example.yaml
configs/huggingface/: baize_llm_example.yaml  bloom_llm_example.yaml  dolly_llm_example.yaml  falcon_llm_example.yaml  flan_ul2_llm_exampleyml.yaml  gpt4-x-alpaca_llm_example.yaml  gpt4all_llm_example.yaml  huggingface_llm_example.yaml  koala_llm_example.yaml  lamini_llm_example.yaml  llama_llm_example.yaml  (+13 more)
talkative_llm/: __init__.py  cli.py  llm.py  meta_data.py  utils.py
tests/: test_model_generation.py  test_model_loading.py
(+7 files in other folders)
